<resources>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">후다닥</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>

    <string name="app_name">후다닥</string>
    <string name="identity">아이디</string>
    <string name="password">비밀번호</string>
    <string name="korean">한국어</string>
    <string name="english">영어</string>
    <string name="loginButton">로그인</string>
    <string name="wrongId">아이디를 잘 못 입력하였습니다.</string>
    <string name="wrongPw">비밀번호를 잘 못 입력하였습니다.</string>
    <string name="idHint">아이디를 입력하세요.</string>
    <string name="pwHint">비밀번호를 입력하세요.</string>
    
    
    <string name="urlTitle">URL 입력</string>
    <string name="insertURL">주소를 입력하세요.</string>
    <string name="videoTitle">불러온 동영상 목록</string>
    
    <string name="logout">로그아웃</string>

</resources>
